Time and records fix
