# bh-api/src/routes/public.js
@@ -2,7 +2,6 @@ import { Router } from "express";
 import {
   getGoalieStatisticsHandler,
   getOverviewHandler,
-  getRecordsHandler,
   getPlayerRecordsHandler,
   getPlayerStatisticsHandler,
   getSeriesHandler,
@@ -16,7 +15,6 @@ const router = Router();
 router.get("/stadiums", getStadiums);
 router.get("/teams", getTeams);
 router.get("/overview", getOverviewHandler);
-router.get("/records", getRecordsHandler);
 router.get("/statistics/players", getPlayerStatisticsHandler);
 router.get("/statistics/goalies", getGoalieStatisticsHandler);
 router.get("/records/players", getPlayerRecordsHandler);
